plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/numberPlusString.xpath2
55 + <error descr="Expected type 'xs:numeric', got 'xs:string'">'66'</error>